--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "1.0.0",
   "description": "multiverse server",
   "main": "index.js",
-   "engines": {
-    "node": "16.14.0"
-  },
+  
  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "index.js"
   },
   "author": "pavan",
   "license": "ISC",
